# rusty-kaspa

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
cli/src/modules/: rpc.rs
components/addressmanager/src/: lib.rs
components/connectionmanager/src/: lib.rs  relay_dial.rs
components/consensusmanager/src/: session.rs
components/p2p-libp2p/src/: helper_api.rs  lib.rs  relay_auto.rs  relay_pool.rs  service.rs  swarm.rs  transport.rs
components/p2p-libp2p/tests/: dcutr.rs  dcutr_advertisement.rs
consensus/: Cargo.toml
consensus/core/src/: constants.rs  tx.rs
consensus/src/: test_helpers.rs
consensus/src/consensus/: factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs
consensus/src/processes/: block_depth.rs  difficulty.rs  parents_builder.rs  pruning.rs  traversal_manager.rs  window.rs
crypto/txscript/src/: lib.rs
database/rocknroll/: Cargo.toml
database/rocknroll/src/: main.rs
database/src/: registry.rs
kaspad/src/: args.rs  daemon.rs  libp2p.rs
kaspad/src/libp2p/: args.rs  tests.rs
mining/src/: manager.rs  manager_tests.rs
mining/src/mempool/: check_transaction_standard.rs  validate_and_insert_transaction.rs
mining/src/testutils/: consensus_mock.rs
musl-toolchain/: build.sh
protocol/flows/src/: flow_context.rs
protocol/mining/: Cargo.toml
simpa/: Cargo.toml
simpa/src/: main.rs
simpa/src/simulator/: idler.rs  miner.rs  mod.rs  network.rs
tcp-hole-punch/docs/: DCUTR-LAB-RUNBOOK.md  LIBP2P-OPERATOR.md  NAT-LAB-RECORD.md
wasm/nodejs/: README.md  addresses.ts  derivation.ts  package.json  tsconfig.json
(+72 files in other folders)
