[package]
name = "simpa"
description = "Kaspa Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
kaspa-addressmanager.workspace = true
kaspa-consensusmanager.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-notify.workspace = true
kaspa-consensus.workspace = true
kaspa-core.workspace = true
kaspa-database.workspace = true
kaspa-hashes.workspace = true
kaspa-mining.workspace = true
kaspa-p2p-flows.workspace = true
kaspa-p2p-lib.workspace = true
kaspa-perf-monitor.workspace = true
kaspa-utils.workspace = true
parking_lot.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "kaspa-alloc/heap"]
